<resources>
    <string name="app_name">Recipes Book</string>
    <string name="recipe_app">Recipe App!</string>
    =======
    <!-- TODO: Remove or change this placeholder text -->
    <string name="thousands_of_tested_recipes">Thousands of tested recipes</string>
    <string name="sup_title_on_boarding">There is no need to fear failure. Tested recipes are guaranteed to work by our professional chefs.</string>
    <string name="get_started">Get Started</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="email">email</string>
    <string name="enter_your_email">enter your email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="username">username</string>
    <string name="enter_your_username">enter your username</string>
    <string name="enter_your_password">enter your password</string>
    <string name="have_an_account">have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">confirm password</string>
    <string name="enter_confirm_password">enter confirm password</string>
    <string name="country">Country</string>
    <string name="home">Home</string>
    <string name="serch">Serch</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>

    <string-array name="countries_array">
        <item>Oman (+968)</item>
        <item>United States (+1)</item>
        <item>Saudi Arabia (+966)</item>
        <item>United Arab Emirates (+971)</item>
        <item>Kuwait (+965)</item>
        <item>UAE (+971)</item>
        <item>Bahrain (+973)</item>
        <item>palestine (+970)</item>
        <item>Lebanon (+961)</item>
        <item>Qatar (+974)</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome, 👋🏻</string>
    <string name="type_ingredients">Type ingredients...</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="ingredients_comma_separated">Ingredients (comma separated)</string>
    <string name="steps_comma_separated">Steps (comma separated)</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="all_recipes">All Recipes</string>
    <string name="viedeo_tutorial">Viedeo Tutorial</string>
    <string name="logout">Logout</string>
    <string name="edite_recipe">Edite Recipe</string>
    <string name="enter_your_email_to_change_password">Enter your email to change password</string>
    <string name="change_email">Change email?</string>
    <string name="reset_password">Reset Password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    >>>>>>> main
</resources>