<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui_screens.LoginScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40ssp"
        android:src="@drawable/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo" />


    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/log_in_to_your_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />


    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_log_in" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        app:cursorColor="@color/primary"
        app:hintEnabled="false"
        app:hintTextColor="@color/slate_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_selector"
            android:drawableStart="@drawable/ic_selector_email"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_email" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        app:cursorColor="@color/primary"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/slate_400"
        app:hintEnabled="false"
        app:hintTextColor="@color/slate_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_selector"
            android:drawableStart="@drawable/ic_selector_lock"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/slate_600"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/btn_main_shpe"
        android:elevation="0dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />


    <TextView
        android:id="@+id/tv_don_t_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/slate_800"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>