<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_screens.RegisterScreen">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginTop="@dimen/_40ssp"
            android:src="@drawable/man"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/primary"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/image_profile"
            app:layout_constraintStart_toStartOf="@id/image_profile"
            app:layout_constraintTop_toBottomOf="@id/image_profile" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/create_a_new_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/image_profile"
            app:layout_constraintStart_toStartOf="@id/image_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/primary"
            app:hintEnabled="false"
            app:hintTextColor="@color/slate_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_selector"
                android:drawableStart="@drawable/ic_selector_username"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/enter_your_username"
                android:inputType="text"
                android:paddingHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_username" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/primary"
            app:hintEnabled="false"
            app:hintTextColor="@color/slate_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_selector"
                android:drawableStart="@drawable/ic_selector_email"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/country"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_email" />


        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/ed_selector"
            android:paddingHorizontal="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_country" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_country" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/primary"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/slate_400"
            app:hintEnabled="false"
            app:hintTextColor="@color/slate_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_selector"
                android:drawableStart="@drawable/ic_selector_lock"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/primary"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/slate_400"
            app:hintEnabled="false"
            app:hintTextColor="@color/slate_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_selector"
                android:drawableStart="@drawable/ic_selector_lock"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/enter_confirm_password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/btn_main_shpe"
            android:elevation="0dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_confirm_password" />

        <TextView
            android:id="@+id/tv_have_a_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/have_an_account"
            android:textAlignment="center"
            android:textColor="@color/slate_800"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>