<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui_screens.OnBoardingScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/on_boarding_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/on_boarding_image"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_36sdp"
            android:text="@string/thousands_of_tested_recipes"
            android:textColor="@color/slate_900"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/sup_title_on_boarding"
            android:textAlignment="center"
            android:textColor="@color/slate_400"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>


    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:background="@drawable/btn_main_shpe"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>